Clean up and correct cargo config.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
-name = "hello_glium"
+name = "rust_opengl"
 version = "0.0.1"
-authors = [ "Gerlof Fokkema <gerlof.fokkema@gmail.com>" ]
-
-[[bin]]
-name = "main"
-path = "src/main.rs"
+authors = ["Gerlof Fokkema"]
 
 [dependencies]
 cgmath = "0.3.1"
